[package]
name = "HTTPie"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = "2.33.3"
colored = "2"
jsonxf = "1.1"
mime = "0.3"
reqwest = {version = "0.11.0", features = ["json"]}
tokio = {version = "1",features = ["full"]}
